@@ -11,6 +11,8 @@ Revision history for DBIx::Class
         - Fix issue where the query was becoming overly mangled when trying
           to use pagination with a query that has a sub-select in the WHERE
           clause
+        - Fix possible incorrect pagination on Oracle, when a resultset
+          is not ordered by a unique column
         - Revert "Fix incorrect signature of the default sqlt_deploy_hook"
           from 0.08191 - documentation was in fact incorrect, not the code
         - Fix Sybase ASE IC::DateTime support (::Storage going out of sync
